# WuMing

./: .buildconfig  README.md  com.ericlin.wuming.json  gen_pot.sh  meson.build
data/: com.ericlin.wuming.desktop.in  com.ericlin.wuming.gschema.xml  com.ericlin.wuming.metainfo.xml.in  com.ericlin.wuming.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  en_US.po  en_US.po~  meson.build  wuming.pot  wuming.pot~  zh_CN.po  zh_CN.po~
src/: check-history-page.c  check-history-page.h  check-history-page.ui  main.c  meson.build  ring-buffer.c  ring-buffer.h  scan-page.c  scan-page.h  scan-page.ui  scanning-page.c  scanning-page.h  scanning-page.ui  security-overview-page.c  security-overview-page.h  security-overview-page.ui  shortcuts-dialog.ui  style.css  systemd-control.c  systemd-control.h  threat-page.c  threat-page.h  threat-page.ui  update-signature-page.c  update-signature-page.h  update-signature-page.ui  update-signature.c  update-signature.h  updating-page.c  updating-page.h  updating-page.ui  wuming-application.c  wuming-application.h  wuming-preferences-dialog.c  wuming-preferences-dialog.h  wuming-preferences-dialog.ui  wuming-window.c  wuming-window.h  wuming-window.ui  wuming.gresource.xml
src/clamscanc/: Makefile  clamscanc  clamscanc.c  manager.c  manager.h  watchdog.c  watchdog.h
src/clamscanp/: Makefile  clamscanp.c  manager.c  manager.h  watchdog.c  watchdog.h
src/libs/: check-scan-time.c  check-scan-time.h  date-to-days.h  delete-file.c  delete-file.h  dynamic-timeout.c  dynamic-timeout.h  file-security-status.h  file-security.c  file-security.h  meson.build  path-operations.c  path-operations.h  realtime-notification.c  realtime-notification.h  ring-buffer.c  ring-buffer.h  scan-options-configs.h  scan.c  scan.h  signature-status.c  signature-status.h  subprocess-components.c  subprocess-components.h  systemd-control.c  systemd-control.h  thread-components.c  thread-components.h  update-signature.c  update-signature.h  wuming-unlinkat-helper.c  wuming-unlinkat-helper.h
